--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^0.16.0",
     "eslint": "^1.2.1",
     "exports-loader": "^0.6.2",
+    "fixture-factory": "^1.4.0",
     "hapi": "^9.0.3",
     "html-webpack-plugin": "^1.6.1",
     "image-webpack-loader": "^1.6.1",
@@ -27,7 +28,7 @@
     "node-sass": "^3.2.0",
     "nodemon": "^1.4.1",
     "path": "^0.11.14",
-    "peters-toolbelt": "peterkaleta/peters-toolbelt",
+    "radium": "^0.14.1",
     "react": "^0.13.3",
     "react-bootstrap": "^0.24.5",
     "react-hot-loader": "^1.2.9",
@@ -36,5 +37,8 @@
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
     "webpack-dev-server": "^1.10.1"
+  },
+  "devDependencies": {
+    "peters-toolbelt": "^0.3.9"
   }
 }
